--- a/src/_layouts/home.njk
+++ b/src/_layouts/home.njk
@@ -2,13 +2,13 @@
 layout: base
 ---
 
-<header class="section spot-color-primary">
+<header class="section spot-color-light-glare">
   <div class="section__inner">
     <div class="wrapper flow region">
       <h1 class="text-center">{{ title }}</h1>
     </div>
   </div>
-  {% include 'svg/divider-waves.svg' %}
+  {% include 'svg/divider-pixels.svg' %}
 </header>
 
 <article class="region">
@@ -22,21 +22,23 @@ layout: base
     <h2>{{ blog.title }}</h2>
     <!-- blog intro text is optional. -->
     {% if blog.intro %}
-    <p>{{ blog.intro }}</p>
+      <p>{{ blog.intro }}</p>
     {% endif %}
   </div>
   <!-- TODO: duplicate of partials/blog.njk -->
 
   <ul class="wrapper grid mt-l-xl" role="list" data-rows="masonry" data-layout="50-50">
-    {% set postslist = collections.posts %} {% for post in postslist.slice(0, 4) %}
+    {% set postslist = collections.posts %}
+    {% for post in postslist.slice(0, 4) %}
 
-    <li class="card flow overflow-hidden">
-      <h3>
-        <a href="{{ post.url | url }}">{{ post.data.title }}</a>
-      </h3>
-      {% set definedDate = post.date %} {% include "partials/date.njk" %}
-      <p>{{ post.data.description }}</p>
-    </li>
+      <li class="card flow overflow-hidden">
+        <h3>
+          <a href="{{ post.url | url }}">{{ post.data.title }}</a>
+        </h3>
+        {% set definedDate = post.date %}
+        {% include "partials/date.njk" %}
+        <p>{{ post.data.description }}</p>
+      </li>
 
     {% endfor %}
   </ul>
