--- a/src/assets/css/blocks/section.css
+++ b/src/assets/css/blocks/section.css
@@ -4,7 +4,7 @@
 
 .section__inner {
   background: var(--spot-color, var(--color-dark));
-  color: var(--color-light);
+  color: var(--color-primary);
 }
 
 .section blockquote {
