--- a/src/assets/css/global/global-styles.css
+++ b/src/assets/css/global/global-styles.css
@@ -18,8 +18,8 @@ h1,
 h2,
 h3 {
   line-height: 1;
-  letter-spacing: var(--tracking-s);
-  font-family: var(--font-display);
+  /* letter-spacing: var(--tracking-s); */
+  font-family: var(--font-logo);
 }
 
 h1 {
