--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -4,27 +4,30 @@
 <html lang="{{ meta.lang }}">
   <head>
     <!-- charset/http-equiv/viewport -->
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <!-- title -->
     <title>
-      {% if seo.title %} {{ seo.title }}
+      {% if seo.title %}
+        {{ seo.title }}
       {% elif title %}
-      {{ title }}
+        {{ meta.siteName }} | {{ title }}
       {% else %}
-      {{ meta.siteName }}
+        {{ meta.siteName }}
       {% endif %}
     </title>
 
     <!-- synchronous js / schema  -->
-    {% include "schemas/base-schema.njk" %} {% if schema == 'blog' %}
-    <!-- include blogpost schema  -->
-    {%- include "schemas/blogpost-schema.njk" %} {% endif %}
+    {% include "schemas/base-schema.njk" %}
+    {% if schema == 'blog' %}
+      <!-- include blogpost schema  -->
+      {%- include "schemas/blogpost-schema.njk" %}
+    {% endif %}
 
     <!-- synchronous css / inline css  -->
-    <link rel="stylesheet" href="/assets/css/global.css?{{ assetHash }}" />
+    <link rel="stylesheet" href="/assets/css/global.css?{{ assetHash }}"/>
 
     <!-- preloads -->
     <link
@@ -33,30 +36,30 @@
       as="font"
       type="font/woff2"
       crossorigin
-    />
+/>
     <link
       rel="preload"
       href="/assets/fonts/inter/inter-v7-latin-700.woff2"
       as="font"
       type="font/woff2"
       crossorigin
-    />
+/>
     <link
       rel="preload"
       href="/assets/fonts/redhat/red-hat-display-v7-latin-900.woff2"
       as="font"
       type="font/woff2"
       crossorigin
-    />
+/>
 
     <!-- preloads in page data -->
     {% if preloads -%}
-    <!-- prettier-ignore -->
-    <link rel="preload"
+      <!-- prettier-ignore -->
+      <link rel="preload"
             href="{{ preloads.href }}"
             as="{{ preloads.as }}"
             {% if preloads.type %}type={{ preloads.type }}{% endif %}{% if preloads.imagesrcset %}imagesrcset="{{ preloads.imagesrcset }}" {% endif %}
-            {% if preloads.crossorigin %}crossorigin{% endif %} />
+            {% if preloads.crossorigin %}crossorigin{% endif %}/>
     {% endif %}
 
     <!-- defered js  -->
@@ -73,12 +76,17 @@
     <!-- content slot -->
     <main id="main" class="flow">{{ content | safe }}</main>
 
+    <!-- next-prev-post -->
+    {% if schema == 'blog' %}
+      {% include "partials/next-prev-post.njk" %}
+    {% endif %}
+
     <!-- footer -->
     {% include "partials/footer.njk" %}
 
     <!-- youtube if actvated in yaml -->
     {% if youtube %}
-    <script
+      <script
       type="module"
       src="https://cdn.jsdelivr.net/npm/@justinribeiro/lite-youtube@1.4.0/lite-youtube.min.js"
     ></script>
