feat: added tags for blog posts

--- a/src/assets/css/blocks/site-foot.css
+++ b/src/assets/css/blocks/site-foot.css
@@ -2,6 +2,7 @@
   padding: var(--space-s-m);
   background: var(--color-dark);
   color: var(--color-light);
+  font-family: var(--font-base);
 }
 
 .site-foot__inner {
