--- a/src/assets/css/global/global-styles.css
+++ b/src/assets/css/global/global-styles.css
@@ -8,8 +8,8 @@ body {
   color: var(--color-dark);
   background: var(--color-light);
   font-size: var(--size-step-1);
-  font-family: var(--font-base);
-  line-height: 1.4;
+  font-family: var(--font-base-serif);
+  line-height: 1.6;
   letter-spacing: var(--tracking);
 }
 
@@ -19,7 +19,7 @@ h2,
 h3 {
   line-height: 1;
   /* letter-spacing: var(--tracking-s); */
-  font-family: var(--font-logo);
+  font-family: var(--font-display);
 }
 
 h1 {
