--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -8,13 +8,23 @@ preloads:
   crossorigin: true
 ---
 
-<article class="region blog">
+<article class="region blog spot-color-light-glare">
   <div class="wrapper flow prose">
-    <h1 class="gradient-text">{{ title }}</h1>
+    <h1>{{ title }}</h1>
 
     {% set definedDate = date %}
     {% include "partials/date.njk" %}
 
-    {{ content | safe }}
+    <ul>
+      {% for tag in tags %}
+        <li>
+          <a href="/blog/tag/{{ tag | slugify }}">{{ tag }}</a>
+        </li>
+      {% endfor %}
+    </ul>
+
+    <p class="read-time">{{ content | emojiReadTime  }}</p>
+
+    {{ content | safe  }}
   </div>
 </article>
