--- a/src/assets/css/blocks/blog.css
+++ b/src/assets/css/blocks/blog.css
@@ -1,5 +1,6 @@
 .blog h1 {
   font-size: var(--size-step-4);
+  color: var(--color-primary);
 }
 
 .blog h2 {
@@ -13,4 +14,10 @@
 .blog img {
   max-inline-size: var(--max-img-width, 100%);
   block-size: auto;
+}
+
+.blog p.read-time {
+  border-bottom: 0.8rem solid var(--color-dark);
+  color: var(--color-dark);
+  padding: 0 0 var(--space-s) 0;
 }
