--- a/src/assets/css/blocks/menu.css
+++ b/src/assets/css/blocks/menu.css
@@ -28,6 +28,7 @@ nav.navbar {
   position: var(--nav-position, absolute);
   /* inset-block-start: 0.5rem; */
   inset-inline-end: 0.1rem;
+  font-family: var(--font-base);
 }
 
 /* Remove default list styling and create layout for list */
