--- a/src/assets/css/blocks/next-prev.css
+++ b/src/assets/css/blocks/next-prev.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   gap: var(--space-xs);
+  font-family: var(--font-base);
 }
 
 .next-prev div div p:last-child {
