--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -27,14 +27,15 @@ preloads:
 
     {{ content | safe  }}
 
-    {% set pageUrl = [page.url, rootURL] | join | urlencode %}
+    {% set pageUrl = [rootURL, page.url] | join %}
+    {% set urlEncoded = pageUrl | urlencode %}
     {% set stitle = title | urlencode %}
 
     <p>
-      <a href="https://www.facebook.com/sharer.php?u={{ pageUrl }}">Facebook</a> ~
-      <a href="https://twitter.com/intent/tweet?url={{ pageUrl }}&text={{ stitle }}">Twitter</a> ~
-      <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ pageUrl }}">LinkedIn</a> ~ 
-      <a href="https://reddit.com/submit?url={{pageUrl}}&title={{stitle}}">Reddit</a>
+      <a href="https://www.facebook.com/sharer.php?u={{ urlEncoded }}">Facebook</a> ~
+      <a href="https://twitter.com/intent/tweet?url={{ urlEncoded }}&text={{ stitle }}">Twitter</a> ~
+      <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ urlEncoded }}">LinkedIn</a> ~ 
+      <a href="https://reddit.com/submit?url={{urlEncoded}}&title={{stitle}}">Reddit</a>
     </p>
   </div>
 </article>
