--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -25,6 +25,10 @@ preloads:
 
     <p class="read-time">Takes approximately <span>{{ content | emojiReadTime  }}</span></p>
 
+    {% if toc %}
+      {% include "partials/toc.njk" %}
+    {% endif %}
+
     {{ content | safe  }}
 
     {% set pageUrl = [rootURL, page.url] | join %}
@@ -34,10 +38,9 @@ preloads:
     <hr>
     <h3>Share this post</h3>
     <p>
-      <a href="https://www.facebook.com/sharer.php?u={{ urlEncoded }}" target="_blank">Facebook</a> ~
-      <a href="https://twitter.com/intent/tweet?url={{ urlEncoded }}&text={{ stitle }}" target="_blank">Twitter</a> ~
-      <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ urlEncoded }}" target="_blank">LinkedIn</a> ~ 
-      <a href="https://reddit.com/submit?url={{urlEncoded}}&title={{stitle}}" target="_blank">Reddit</a>
+      <a href="https://www.facebook.com/sharer.php?u={{ urlEncoded }}" target="_blank">Facebook</a> · 
+      <a href="https://twitter.com/intent/tweet?url={{ urlEncoded }}&text={{ stitle }}" target="_blank">Twitter</a> · 
+      <a href="https://www.linkedin.com/sharing/share-offsite/?url={{ urlEncoded }}" target="_blank">LinkedIn</a>
     </p>
   </div>
 </article>
