--- a/src/assets/css/global/global-styles.css
+++ b/src/assets/css/global/global-styles.css
@@ -16,7 +16,8 @@ body {
 /* Base typesetting */
 h1,
 h2,
-h3 {
+h3,
+h4 {
   line-height: 1;
   /* letter-spacing: var(--tracking-s); */
   font-family: var(--font-display);
