--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -5,11 +5,12 @@
     <div class="site-foot__inner">
       <nav id="footernav" class="site-foot__inner" aria-label="Footer">
 
-        &copy; {% year %} <a href="/" {% if activePage === '/' %} aria-current="page" {% endif %}>{{ meta.siteName }} <small>{% packageVersion %}</small> </a>
+        &copy; {% year %}
+        <a href="/" {% if activePage === '/' %} aria-current="page" {% endif %}>{{ meta.siteName }}</a>
 
-        {% for item in navigation.bottom %}
+        {# {% for item in navigation.bottom %}
 
-        <a
+          <a
           href="{{ item.url }}"
           {{
           helpers.getLinkActiveState(item.url,
@@ -20,29 +21,26 @@
           >{{ item.text }}</a
         >
 
-        {% endfor %}
+        {% endfor %} #}
       </nav>
 
       <nav id="social" class="site-foot__inner" aria-label="Social links">
         {% for item in social %}
 
-        {% if item.platform == "rss" %}
-        <a href="{{ meta.url }}/{{ locale }}{{ item.url }}" rel="alternate" type="application/rss+xml">
-        {% else %}
-        <a href="{{ item.url }}" rel="me">
-          {% endif %}
-          <span class="sr-only">{{ item.platform }}</span>
-          <div aria-hidden="true">{% include 'icons/social-' + item.icon %}</div>
-          </a
+          {% if item.platform == "rss" %}
+            <a href="{{ meta.url }}/{{ locale }}{{ item.url }}" rel="alternate" type="application/rss+xml">
+            {% else %}
+              <a href="{{ item.url }}" rel="me">
+              {% endif %}
+              <span class="sr-only">{{ item.platform }}</span>
+              <div aria-hidden="true">{% include 'icons/social-' + item.icon %}</div>
+            </a
           >
-        {% endfor %}
-
+          {% endfor %}
 
         </nav>
+      </div>
     </div>
-  </div>
 
-  <!-- lang menu -->
-</footer>
-
-
+    <!-- lang menu -->
+  </footer>
