feat: added truncate filter

--- a/src/_includes/socialShare.njk
+++ b/src/_includes/socialShare.njk
@@ -5,11 +5,11 @@
 {% set stitle = title | urlencode %}
 
 {# Twitter Share Button #}
-<a href="https://twitter.com/share?url={{ urlEncoded }}&text={{ stitle }}&via=YourTwitterHandle" target="_blank" rel="noopener noreferrer">Tweet</a>
+<a href="https://twitter.com/share?url={{ urlEncoded }}&text={{ stitle }}&via=saadbess" target="_blank" rel="noopener noreferrer">Twitter</a>
 
 {# Facebook Share Button #}
-<a href="https://www.facebook.com/sharer.php?u={{ urlEncoded }}" target="_blank" rel="noopener noreferrer">Share on Facebook</a>
+<a href="https://www.facebook.com/sharer.php?u={{ urlEncoded }}" target="_blank" rel="noopener noreferrer">Facebook</a>
 
 {# LinkedIn Share Button #}
-<a href="https://www.linkedin.com/shareArticle?mini=true&url={{ urlEncoded }}&title={{ stitle }}" target="_blank" rel="noopener noreferrer">Share on LinkedIn</a>
+<a href="https://www.linkedin.com/shareArticle?mini=true&url={{ urlEncoded }}&title={{ stitle }}" target="_blank" rel="noopener noreferrer">LinkedIn</a>
 
