--- a/src/_includes/partials/next-prev-post.njk
+++ b/src/_includes/partials/next-prev-post.njk
@@ -10,13 +10,13 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-big-left">
             <path d="M18 15h-6v4l-7-7 7-7v4h6v6z"></path>
           </svg>
-          <a href={{ previousPost.url }}>{{ previousPost.data.title }}</a>
+          <a href={{ previousPost.url }}>{{ previousPost.data.title | truncate(25) }}</a>
         </p>
       {% endif %}
 
       {% if nextPost %}
         <p>
-          <a href={{ nextPost.url }}>{{ nextPost.data.title }}</a>
+          <a href={{ nextPost.url }}>{{ nextPost.data.title | truncate(25) }}</a>
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-big-right">
             <path d="M6 9h6V5l7 7-7 7v-4H6V9z"></path>
           </svg>
