--- a/src/social-preview.njk
+++ b/src/social-preview.njk
@@ -10,7 +10,7 @@ eleventyExcludeFromCollections: true
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <svg width="1200" height="628" viewBox="0 0 1200 628" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
 >
-  {% set titleInLines = preview.data.title | splitlines(16) | truncate(100) %}
+  {% set titleInLines = preview.data.title | splitlines(16) %}
   {% set numberOfLines = titleInLines.length %}
   {% if numberOfLines == 1 %}
   {% set verticalStartingPoint = 340 %}
@@ -51,7 +51,7 @@ eleventyExcludeFromCollections: true
   >
     {% for line in titleInLines %}
     <tspan x="160" y="{{ verticalStartingPoint - 20 + loop.index0 * 80 }}">
-      {{ line }}
+      {{ line | truncate(40) }}
     </tspan>
     {% endfor %}
   </text>
