--- a/src/_includes/socialShare.njk
+++ b/src/_includes/socialShare.njk
@@ -5,10 +5,10 @@
 {% set stitle = title | urlencode %}
 
 {# Twitter Share Button #}
-<a href="https://twitter.com/share?url={{ urlEncoded }}&text={{ stitle }}&via=saadbess" target="_blank" rel="noopener noreferrer">Twitter</a>
+<a href="https://twitter.com/share?url={{ urlEncoded }}&text={{ stitle }}&via=saadbess" target="_blank" rel="noopener noreferrer">Twitter</a> ~
 
 {# Facebook Share Button #}
-<a href="https://www.facebook.com/sharer.php?u={{ urlEncoded }}" target="_blank" rel="noopener noreferrer">Facebook</a>
+<a href="https://www.facebook.com/sharer.php?u={{ urlEncoded }}" target="_blank" rel="noopener noreferrer">Facebook</a> ~
 
 {# LinkedIn Share Button #}
 <a href="https://www.linkedin.com/shareArticle?mini=true&url={{ urlEncoded }}&title={{ stitle }}" target="_blank" rel="noopener noreferrer">LinkedIn</a>
