feat: added banner for coffee

--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -35,6 +35,8 @@ preloads:
     {% set urlEncoded = pageUrl | urlencode %}
     {% set stitle = title | urlencode %}
 
+    {% include "partials/coffee.njk" %}
+
     <hr>
     <h3>Share this post</h3>
     <article>
