feat: added banner for coffee

--- a/src/assets/css/blocks/coffee.css
+++ b/src/assets/css/blocks/coffee.css
@@ -19,4 +19,6 @@
 
 .coffee a {
     margin-left: 0 !important;
+    background-color: #FBAA19 !important;
+    color: var(--color-dark) !important;
 }
