--- a/src/_layouts/blog.njk
+++ b/src/_layouts/blog.njk
@@ -15,10 +15,10 @@ pagination:
     </div>
   </div>
 
-  {% include 'svg/divider-pixels.svg' %}
+  {# {% include 'svg/divider-pixels.svg' %} #}
 </header>
 
-<article class="wrapper region">
+<article class="wrapper">
   <ul class="grid mt-l-xl" role="list" data-rows="masonry" data-layout="50-50">
     {% for post in posts %}
 
