--- a/src/_layouts/home.njk
+++ b/src/_layouts/home.njk
@@ -8,10 +8,10 @@ layout: base
       <h1 class="text-center">{{ title }}</h1>
     </div>
   </div>
-  {% include 'svg/divider-pixels.svg' %}
+  {# {% include 'svg/divider-pixels.svg' %} #}
 </header>
 
-<article class="region">
+<article>
   <div class="wrapper flow prose">
     {{ content | safe }}
   </div>
