--- a/src/_layouts/podcast.njk
+++ b/src/_layouts/podcast.njk
@@ -4,6 +4,7 @@ layout: base
 
 <article class="region page">
   <div class="wrapper flow">
+    {% imagePlaceholder "./src/assets/images/lit-banner.jpeg", "Life in Tech with Jay and Saad" %}
     <h1>{{ title }}</h1>
     {{ content | safe }}
   </div>
