--- a/src/assets/css/blocks/coffee.css
+++ b/src/assets/css/blocks/coffee.css
@@ -10,6 +10,7 @@
     text-align: center;
     gap: var(--space-xs);
     line-height: 1.2;
+    border-radius: var(--border-radius);
 }
 
 .coffee svg {
