--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -37,6 +37,10 @@ preloads:
 
     {% include "partials/coffee.njk" %}
 
+    <div class="comments-container" data-postId="{{ postId }}">
+      <!-- Comments will be loaded here -->
+    </div>
+
     <hr>
     <h3>Share this post</h3>
     <article>
