feat: comments section

--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -37,7 +37,7 @@ preloads:
 
     {% include "partials/coffee.njk" %}
 
-    <div class="comments-container" data-postId="{{ postId }}">
+    <div class="flow comments-container" data-postId="{{ postId }}">
       <!-- Comments will be loaded here -->
     </div>
 
