--- a/src/assets/css/blocks/site-head.css
+++ b/src/assets/css/blocks/site-head.css
@@ -1,6 +1,16 @@
+.header-main {
+  background-color: var(--color-dark);
+}
+
+.header {
+  background-color: var(--color-dark);
+  color: var(--color-light);
+}
+
 .site-head {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  background-color: var(--color-dark);
 }
