--- a/src/assets/css/blocks/menu.css
+++ b/src/assets/css/blocks/menu.css
@@ -33,7 +33,7 @@ nav.navbar {
 
 /* Remove default list styling and create layout for list */
 nav.navbar ul {
-  background: var(--nav-list-background, var(--color-light));
+  background: var(--nav-list-background, var(--color-dark));
   box-shadow: var(--nav-list-shadow, -5px 0 11px 0 rgb(0 0 0 / 0.2));
   display: flex;
   flex-direction: var(--nav-list-layout, column);
@@ -44,8 +44,10 @@ nav.navbar ul {
   margin: 0;
   padding: var(--nav-list-padding, 2rem);
   position: var(--nav-list-position, fixed);
-  inset-block-start: 0; /* Logical property. Equivalent to top: 0; */
-  inset-inline-end: 0; /* Logical property. Equivalent to right: 0; */
+  inset-block-start: 0;
+  /* Logical property. Equivalent to top: 0; */
+  inset-inline-end: 0;
+  /* Logical property. Equivalent to right: 0; */
   width: var(--nav-list-width, min(22rem, 100vw));
   visibility: var(--nav-list-visibility, visible);
 }
@@ -56,14 +58,15 @@ nav.navbar li a {
   gap: var(--space-xs);
 }
 
-nav.navbar [aria-expanded='false'] + ul {
+nav.navbar [aria-expanded='false']+ul {
   transform: var(--nav-list-transform, translateX(100%));
   visibility: var(--nav-list-visibility, hidden);
 }
 
 /* animates ul only when opening to avoid flash on page load, svg always */
 @media (prefers-reduced-motion: no-preference) {
-  nav.navbar [aria-expanded='true'] + ul,
+
+  nav.navbar [aria-expanded='true']+ul,
   nav.navbar svg {
     transition: transform 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55),
       visibility 0.05s linear;
@@ -72,7 +75,7 @@ nav.navbar [aria-expanded='false'] + ul {
 
 /* Basic link styling */
 nav.navbar a {
-  --text-color: var(--color-dark);
+  --text-color: var(--color-light);
   border-block-end: 3px solid var(--border-color, transparent);
   color: var(--text-color);
   padding: 0.1rem;
@@ -86,8 +89,8 @@ nav.navbar a:where(:hover, :focus) {
 
 /* Change border-color and color for the active page */
 nav.navbar [aria-current='page'] {
-  --border-color: var(--color-primary);
-  --text-color: var(--color-primary);
+  --border-color: var(--color-white);
+  --text-color: var(--text-color);
 }
 
 /* Reset button styling */
@@ -113,10 +116,15 @@ nav.navbar svg {
   height: 100%;
   width: auto;
 }
+
 header svg {
   transform: translateY(-0.1em);
 }
 
 nav.navbar [aria-expanded='true'] svg {
   transform: var(--nav-list-rotate, rotate(45deg));
+}
+
+.cross-svg {
+  fill: var(--color-white);
 }
