--- a/src/_layouts/home.njk
+++ b/src/_layouts/home.njk
@@ -5,7 +5,7 @@ layout: base
 <header class="section spot-color-light-dark">
   <div class="section__inner">
     <div class="wrapper flow region">
-      <h1 class="text-center">{{ title }}</h1>
+      <h1 class="text-center home-title">{{ title }}</h1>
     </div>
   </div>
   {% include 'svg/divider-pixels.svg' %}
