feat: added a loader for the comments section

--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -39,6 +39,7 @@ preloads:
 
     <div class="flow comments-container" data-postId="{{ postId }}">
       <!-- Comments will be loaded here -->
+      <div class="loader"></div>
     </div>
 
     <hr>
