feat: added new partial for blog tags

--- a/src/_includes/partials/read-more-articles.njk
+++ b/src/_includes/partials/read-more-articles.njk
@@ -1,4 +1,4 @@
-<div class="wrapper flex justify-end">
+<div class="wrapper region flex justify-end">
   <p class="button">
     <a href="/blog/">Read more articles</a>
   </p>
